app/src/main/java/com/example/phone/utility/network/errors/DoesNotConvertToFiat.java
package com.example.phone.utility.network.errors;

/**
 * Exception thrown if an endpoint does not convert to fiat currencies
 */
final public class DoesNotConvertToFiat extends Exception {
}
